<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title"
        android:paddingLeft="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="16dp"
        android:text="@string/label"
        style="?android:attr/windowTitleStyle"/>
    <EditText
        android:id="@+id/labelBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:layout_below="@+id/title"
        style="@style/labelEditTextStyle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/labelBox">
        <Button
            android:textSize="@dimen/dialog_button_font_size"
            android:textColor="@color/clock_white"
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time_picker_cancel"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:textSize="@dimen/dialog_button_font_size"
            android:textColor="@color/hot_pink"
            android:id="@+id/setButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time_picker_set"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>
</RelativeLayout>
