<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">
    <GridLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:columnCount="3">
        <TextView
            android:textAppearance="@style/header_not_caps"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:layout_column="0"
            android:singleLine="true"
            android:layout_row="0"
            android:layout_columnSpan="3"/>
        <TextClock
            android:textAppearance="@style/big_thin"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:id="@+id/digital_clock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:singleLine="true"
            android:includeFontPadding="false"
            android:layout_row="1"
            android:layout_columnSpan="3"
            android:format12Hour="@string/main_clock_12_hours_format"
            android:format24Hour="@string/clock_24_hours_format"/>
        <View
            android:layout_gravity="center"
            android:id="@+id/pulse"
            android:background="@drawable/bg_circle_white"
            android:layout_width="@dimen/alarm_lockscreen_pulse_size"
            android:layout_height="@dimen/alarm_lockscreen_pulse_size"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnSpan="3"/>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/snooze"
            android:background="@drawable/bg_circle_pink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_snooze"
            android:layout_column="0"
            android:contentDescription="@string/description_direction_left"
            android:layout_row="2"
            android:layout_columnWeight="1"/>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/dismiss"
            android:background="@drawable/bg_circle_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_alarm_off"
            android:layout_column="2"
            android:contentDescription="@string/description_direction_right"
            android:layout_row="2"
            android:layout_columnWeight="1"/>
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/alarm"
            android:background="@android:color/transparent"
            android:paddingLeft="@dimen/alarm_lockscreen_alarm_horizontal_padding"
            android:paddingTop="@dimen/alarm_lockscreen_alarm_vertical_padding"
            android:paddingRight="@dimen/alarm_lockscreen_alarm_horizontal_padding"
            android:paddingBottom="@dimen/alarm_lockscreen_alarm_vertical_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_alarm"
            android:layout_column="1"
            android:contentDescription="@string/description_direction_right"
            android:layout_row="2"
            android:layout_columnWeight="1"/>
        <TextView
            android:textSize="@dimen/bottom_text_size"
            android:textColor="@android:color/white"
            android:layout_gravity="bottom|center_horizontal"
            android:id="@+id/hint"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/alarm_lockscreen_bottom_margin"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_columnSpan="3"/>
    </GridLayout>
    <GridLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:id="@+id/alert"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="@style/alarm_lockscreen_thin"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:id="@+id/alert_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textAppearance="@style/alarm_lockscreen_thin"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:id="@+id/alert_info"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </GridLayout>
</FrameLayout>
